src/objects/FixApp2__FixitDetails__c.object
<CustomObject>
    <fields>
        <fullName>FixApp2__AssignTo__c</fullName>
        <label>Assign To</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FixApp2__CloseDate__c</fullName>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FixApp2__Duration__c</fullName>
        <formula>(IF(TEXT( FixApp2__Status__c ) == &apos;Closed&apos;,  FixApp2__CloseDate__c -  CreatedDate,  NOW() - CreatedDate)) *24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FixApp2__RequestDescription__c</fullName>
        <label>Request Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FixApp2__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FixApp2__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Build Report</fullName>
                </value>
                <value>
                    <fullName>Picklist Update</fullName>
                </value>
                <value>
                    <fullName>Train Me</fullName>
                </value>
                <value>
                    <fullName>Data Issue</fullName>
                </value>
                <value>
                    <fullName>Random Question</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Fixit Details</label>
    <nameField>
        <displayFormat>Fixit-{00000}</displayFormat>
        <label>Fixit Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fixit Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>